--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
 	<title>wow</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
 </head>
 
 <body>
-  <h1>Hello World!</h1>
+  
+  <nav>
+  		<ul>
+  			<li><a href="https://www.google.com/">google</a></li>
+  			<li><a href="https://www.google.com/">google</a></li>
+  			<li><a href="https://www.google.com/">google</a></li>
+  			<li><a href="https://www.google.com/">google</a></li>
+  			<li><a href="https://www.google.com/">google</a></li>
+  		</ul>
+  </nav>
  
+ <div class="round">
+ 	<button class="w3-btn w3-round">Click me</button>
+ 	<button class="w3-btn w3-round">Click me</button>
+ 	<button class="w3-btn w3-round">Click me</button>
+ </div>
 
 
 
